# mcp-host-prototype

./: .env.example  .gitignore  Makefile  WARP.md  main.py  pyproject.toml
internal_agents/: utils.py
internal_agents/gemini/: prompt.py
internal_agents/gemini/sub_agents/data_analyst/: agent.py
internal_agents/gemini/sub_agents/resource_manager/: prompt.py
internal_agents/openai/: __init__.py  function_tools.py
prebuilt_agents/: claude.py  old_openai.py
prebuilt_agents/gemini/: agent.py
prebuilt_agents/gemini/sub_agents/data_analyst/: prompt.py
prebuilt_agents/gemini/sub_agents/resource_manager/: __init__.py  agent.py
services/agent_runner/: __init__.py  agent_runner_service.py  gemini_runner_service.py  openai_runner_service.py
services/application/: __init__.py  local_disk_storage_provider.py
services/artifacts/: __init__.py  local_disk_artifact_service.py
services/content_parser/: __init__.py  content_parser.py  gemini_content_parser.py  openai_content_parser.py
services/file_storage/: __init__.py  file_storage_service.py  openai_storage_service.py
